[project]
name = "nuhs-medivoice"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "extrange", email = "29305375+extrange@users.noreply.github.com"},
]
dependencies = [
    "flask>=3.0.3",
    "boto3>=1.34.118",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
scripts = { start = "flask --app src/nuhs_medivoice/app.py run -h 0.0.0.0 -p 8080" }